kustomize/base/prometheus/prom-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy
spec:
  selector:
    matchLabels:
      app: prometheus
      department: prometheus
  template:
    metadata:
      name: prometheus
      labels:
        app: prometheus
        department: prometheus
    spec:
      containers:
      - name: prometheus
        image: prom/prometheus:v2.2.1
        args:
        - '--config.file=/mnt/etc/prometheus.yml'
        ports:
        - containerPort: 9090
        readinessProbe:
          httpGet:
            path: /graph
            port: 9090
          failureThreshold: 3
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 3
        volumeMounts:
        - name: config-volume
          mountPath: /mnt/etc/
        - name: data-volume
          mountPath: /mnt/data/
        - name: secrets-volume
          mountPath: /var/run/secrets
        resources:
          limits:
            cpu: 200m
            memory: 200m
          requests:
            cpu: 100m
            memory: 100m
      volumes:
      - name: config-volume
        configMap:
          name: prometheus-config
      - name: data-volume
        emptyDir: {}
      - name: secrets-volume
        hostPath:
          path: /var/run/secrets
