kustomize/base/prometheus/prom-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc
  annotations:
    cloud.google.com/backend-config: '{"default": "prometheus-backendconfig"}'
spec:
  selector:
    app: prometheus
    department: prometheus
  ports:
  - protocol: TCP
    port: 9090
    targetPort: 9090
