kustomize/base/prometheus/prom-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.global-static-ip-name: dev-prometheus-ip
    ingress.gcp.kubernetes.io/pre-shared-cert: prometheus-dev-ssl
spec:
  rules:
  - http:
      paths:
        - path: /*
          pathType: ImplementationSpecific
          backend:
            service:
              name: prometheus
              port:
                number: 9090
